--- a/styles/second.css
+++ b/styles/second.css
@@ -56,7 +56,7 @@
 @media only screen and (max-width: 575.98px) {
   .benefits-container {
     display: grid;
-    grid-template-rows: 20vh 30vh 350vh;
+    grid-template-rows: 20vh 30vh 220vh;
     grid-template-columns: 1fr;
     align-items: center;
     justify-content: center;
@@ -65,7 +65,7 @@
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .benefits-container {
-    display: grid;
+    display: griOd;
     grid-template-rows: 20vh 20vh 160vh;
     grid-template-columns: 1fr;
     align-items: center;
@@ -247,22 +247,130 @@
 
 .benefit-sub-text {
   text-transform: uppercase;
-  font-family: "Roboto Mono", sans-serif;
-  font-size: 1.13rem;
-  font-weight: 400;
-  letter-spacing: 0.04em;
-  text-align: left;
-  line-height: 23px;
+  color: #DCDCDC;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .benefit-sub-text {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 0.72rem;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    text-align: left;
+    line-height: 15px;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .benefit-sub-text {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 1.13rem;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    text-align: left;
+    line-height: 23px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .benefit-sub-text {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 1.13rem;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    text-align: left;
+    line-height: 23px;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .benefit-sub-text {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 1.13rem;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    text-align: left;
+    line-height: 23px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .benefit-sub-text {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 1.13rem;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    text-align: left;
+    line-height: 23px;
+  }
 }
 
 .benefit-sub-text-body {
   width: 100%;
-  font-family: "Roboto Mono", sans-serif;
-  font-size: 3.31rem;
-  font-weight: 500;
-  letter-spacing: -0.01em;
-  text-align: left;
-  line-height: 70px;
+  color: #F4F4F4;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .benefit-sub-text-body {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 1.94rem;
+    font-weight: 500;
+    letter-spacing: -0.01em;
+    text-align: left;
+    line-height: 40px;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .benefit-sub-text-body {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 3.31rem;
+    font-weight: 500;
+    letter-spacing: -0.01em;
+    text-align: left;
+    line-height: 70px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .benefit-sub-text-body {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 3.31rem;
+    font-weight: 500;
+    letter-spacing: -0.01em;
+    text-align: left;
+    line-height: 70px;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .benefit-sub-text-body {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 3.31rem;
+    font-weight: 500;
+    letter-spacing: -0.01em;
+    text-align: left;
+    line-height: 70px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .benefit-sub-text-body {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 3.31rem;
+    font-weight: 500;
+    letter-spacing: -0.01em;
+    text-align: left;
+    line-height: 70px;
+  }
 }
 
 .benefits-list-container {
@@ -276,7 +384,7 @@
 
 @media only screen and (max-width: 575.98px) {
   .benefits-list-container {
-    height: 250vh;
+    height: 220vh;
   }
 }
 
@@ -305,7 +413,6 @@
 }
 
 .benefits-inner-list-container {
-  width: 88%;
   /* Small devices (landscape phones, 576px and up) */
   /* // Medium devices (tablets, 768px and up) */
   /* Large devices (desktops, 992px and up) */
@@ -314,11 +421,12 @@
 
 @media only screen and (max-width: 575.98px) {
   .benefits-inner-list-container {
+    width: 100%;
     display: grid;
-    grid-template-rows: 90vh 90vh 90vh;
+    grid-template-rows: 58vh 58vh 58vh;
     grid-template-columns: 80px 1fr;
     align-items: center;
-    grid-row-gap: 22vh;
+    grid-row-gap: 15vh;
   }
 }
 
@@ -336,6 +444,7 @@
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .benefits-inner-list-container {
+    width: 88%;
     display: none;
   }
 }
@@ -579,4 +688,130 @@
   display: flex;
   justify-self: center;
   align-self: center;
+}
+
+.box-1 {
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .box-1 {
+    width: 168px;
+    height: 145px;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .box-1 {
+    width: 292px;
+    height: 252px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .box-1 {
+    width: 292px;
+    height: 252px;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .box-1 {
+    width: 292px;
+    height: 252px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .box-1 {
+    width: 292px;
+    height: 252px;
+  }
+}
+
+.box-3 {
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .box-3 {
+    width: 163px;
+    height: 140px;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .box-3 {
+    width: 292px;
+    height: 252px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .box-3 {
+    width: 292px;
+    height: 268px;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .box-3 {
+    width: 292px;
+    height: 268px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .box-3 {
+    width: 292px;
+    height: 268px;
+  }
+}
+
+.box-1 {
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .box-1 {
+    width: 168px;
+    height: 145px;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .box-1 {
+    width: 292px;
+    height: 252px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .box-1 {
+    width: 292px;
+    height: 252px;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .box-1 {
+    width: 292px;
+    height: 252px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .box-1 {
+    width: 292px;
+    height: 252px;
+  }
 }
