--- a/scss/third.scss
+++ b/scss/third.scss
@@ -4,7 +4,7 @@
 .services-container {
     display: flex;
     align-items: center;
-    width: 75%;
+    width: 84%;
     justify-self: center;
     align-self: center;
 
@@ -14,10 +14,11 @@
     width: 100%;
     display: grid;
     grid-row-gap: 30px;
+
     @media only screen and (max-width: 575.98px) {
         & {
-    
-            grid-template-rows: 40vh 80vh;
+
+            grid-template-rows: 32vh 100vh;
         }
     }
 
@@ -46,16 +47,17 @@
     @media only screen and (min-width: 1200px) {
         & {
             grid-template-rows: 30vh 50vh;
- 
+
         }
     }
 }
 
 .services-heading {
     display: grid;
+
     @media only screen and (max-width: 575.98px) {
         & {
-            grid-template-rows: 10vh 24vh;
+            grid-template-rows: 8vh 18vh;
             width: 100%;
         }
     }
@@ -64,21 +66,24 @@
     @media only screen and (min-width: 576px) and (max-width: 767.98px) {
         & {
             grid-template-rows: 3vh 24vh;
-            width: 100%;        }
+            width: 100%;
+        }
     }
 
     /* // Medium devices (tablets, 768px and up) */
     @media only screen and (min-width: 768px) and (max-width: 991.98px) {
         & {
             grid-template-rows: 3vh 24vh;
-            width: 100%;        }
+            width: 100%;
+        }
     }
 
     /* Large devices (desktops, 992px and up) */
     @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
         & {
             grid-template-rows: 3vh 24vh;
-            width: 100%;        }
+            width: 100%;
+        }
     }
 
     /* // Extra large devices (large desktops, 1200px and up) */
@@ -88,70 +93,158 @@
             width: 60%;
         }
     }
+
     & .sub-title {
-        font-family: "Roboto Mono";
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 23px;
-        letter-spacing: 0.04em;
-        text-align: left;
         color: #DCDCDC;
         text-transform: uppercase;
-    }
-
-    & .title {
-        font-family: "Roboto Mono";
-        font-size: 58px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 79px;
-        letter-spacing: -0.07em;
-        text-align: left;
-        color: #F4F4F4;
         @media only screen and (max-width: 575.98px) {
             & {
-                width: 100%;
+                font-family: "Roboto Mono";
+                font-size: 0.75rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 15px;
+                letter-spacing: 0.04em;
+                text-align: left;
+                width: 60%;
             }
         }
-    
+
         /* Small devices (landscape phones, 576px and up) */
         @media only screen and (min-width: 576px) and (max-width: 767.98px) {
             & {
                 width: 60%;
             }
         }
-    
+
         /* // Medium devices (tablets, 768px and up) */
         @media only screen and (min-width: 768px) and (max-width: 991.98px) {
             & {
                 width: 60%;
             }
         }
-    
+
         /* Large devices (desktops, 992px and up) */
         @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
             & {
                 width: 60%;
             }
         }
-    
+
         /* // Extra large devices (large desktops, 1200px and up) */
         @media only screen and (min-width: 1200px) {
             & {
-                width: 70%;
+                font-family: "Roboto Mono";
+                font-size: 1.13rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 23px;
+                letter-spacing: 0.04em;
+                text-align: left;
+            }
+        }
+    }
+
+    & .title {
+        color: #F4F4F4;
+
+        @media only screen and (max-width: 575.98px) {
+            & {
+                font-family: "Roboto Mono";
+                font-size: 2.38rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 52px;
+                letter-spacing: -0.07em;
+                text-align: left;
+
+            }
+        }
+
+        /* Small devices (landscape phones, 576px and up) */
+        @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+            & {
+                width: 60%;
+            }
+        }
+
+        /* // Medium devices (tablets, 768px and up) */
+        @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+            & {
+                width: 60%;
+            }
+        }
+
+        /* Large devices (desktops, 992px and up) */
+        @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+            & {
+                width: 60%;
+            }
+        }
+
+        /* // Extra large devices (large desktops, 1200px and up) */
+        @media only screen and (min-width: 1200px) {
+            & {
+                font-family: "Roboto Mono";
+                font-size: 3.63rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 79px;
+                letter-spacing: -0.07em;
+                text-align: left;
+                color: #F4F4F4;
             }
         }
     }
 }
+
 .services-title-container {
     border-bottom: 8px solid #D76161;
 }
+
 .services-list-container {
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
+    
+    @media only screen and (max-width: 575.98px) {
+        & {
+            display: grid;
+            grid-template-columns: minmax(180px,300px);
+        }
+    }
+
+    /* Small devices (landscape phones, 576px and up) */
+    @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+        & {
+            display: grid;
+            grid-template-columns: minmax(180px,300px);
+        }
+    }
+
+    /* // Medium devices (tablets, 768px and up) */
+    @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+        & {
+            display: grid;
+            grid-template-columns: minmax(180px,300px);
+        }
+    }
+
+    /* Large devices (desktops, 992px and up) */
+    @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+        & {
+            display: grid;
+            grid-template-columns: minmax(180px,300px);
+
+        }
+    }
+
+    /* // Extra large devices (large desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+        & {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 30px;
+        }
+    }
 }
 
 .service-list {
@@ -160,11 +253,12 @@
     display: grid;
     grid-template-columns: 1fr 3fr;
     align-items: center;
-    grid-column-gap: 10px;
+
     @media only screen and (max-width: 575.98px) {
         & {
             height: 83px;
             border-radius: 14px;
+            grid-column-gap: 5px;
         }
     }
 
@@ -198,6 +292,7 @@
         & {
             height: 123px;
             border-radius: 26px;
+            grid-column-gap: 10px;
         }
     }
 }
@@ -224,9 +319,10 @@
 
 .service-list-1 {
     @extend .service-list;
+
     @media only screen and (max-width: 575.98px) {
         & {
-            width: 220px;
+            width: 200px;
         }
     }
 
@@ -261,9 +357,10 @@
 
 .service-list-2 {
     @extend .service-list;
+
     @media only screen and (max-width: 575.98px) {
         & {
-            width: 361px;
+            width: 280px;
         }
     }
 
@@ -298,9 +395,10 @@
 
 .service-list-3 {
     @extend .service-list;
+
     @media only screen and (max-width: 575.98px) {
         & {
-            width: 381px;
+            width: 295px;
         }
     }
 
@@ -335,6 +433,7 @@
 
 .service-list-4 {
     @extend .service-list;
+
     @media only screen and (max-width: 575.98px) {
         & {
             width: 210px;
@@ -372,9 +471,10 @@
 
 .service-list-5 {
     @extend .service-list;
+
     @media only screen and (max-width: 575.98px) {
         & {
-            width: 420px;
+            width: 300px;
         }
     }
 
